Champ texte - maj des tests

--- a/src/sdg/components/TextField/textFieldTest.html
+++ b/src/sdg/components/TextField/textFieldTest.html
@@ -6,7 +6,8 @@
     />
 </qc-textfield>
 
-<qc-textfield class="qc-md">
+<qc-textfield class="qc-md"
+    >
     <label for="text-md">Moyen</label>
     <input type="text"
            id="text-md"
@@ -92,9 +93,9 @@
 
 <qc-textfield for="zone-xl"
               class="qc-xl"
+              label="Commentaires"
+              description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
 >
-    <label>Commentaires</label>
-    <div     class="qc-description">Vous pouvez entrer des commentaires dans la zone de texte ci-dessous.</div>
     <textarea name="zone-xl" id="zone-xl"></textarea>
 </qc-textfield>
 
