Ajout de composant de test Svelte brut

--- a/src/sdg/components/DropdownList/dropdownListSvelteTest.html
+++ b/src/sdg/components/DropdownList/dropdownListSvelteTest.html
@@ -22,28 +22,28 @@
 
 
 <div style="height: 40rem;">
-<qc-dropdown-list
-        id="dropdown-list-single-choice-no-scroll"
-        label="Choix unique avec recherche"
-        enable-search
->
-  <qc-option value="1" selected>Option 1</qc-option>
-  <qc-option value="2">Option 2</qc-option>
-  <qc-option value="3">Option 3</qc-option>
-  <qc-option value="4">Option 4</qc-option>
-  <qc-option value="5">Option 5</qc-option>
-  <qc-option value="6">Option 6</qc-option>
-  <qc-option value="7">Option 7</qc-option>
-  <qc-option value="8">Option 8</qc-option>
-  <qc-option value="9">Option 9</qc-option>
-  <qc-option value="10">Option 10</qc-option>
-  <qc-option value="11">Option 11</qc-option>
-  <qc-option value="12">Option 12</qc-option>
-  <qc-option value="13">Option 13</qc-option>
-  <qc-option value="14">Option 14</qc-option>
-  <qc-option value="15">Option 15</qc-option>
-  <qc-option value="16">Option 16</qc-option>
-</qc-dropdown-list>
+  <qc-dropdown-list
+          id="dropdown-list-single-choice-no-scroll"
+          label="Choix unique avec recherche"
+          enable-search
+  >
+    <qc-option value="1" selected>Option 1</qc-option>
+    <qc-option value="2">Option 2</qc-option>
+    <qc-option value="3">Option 3</qc-option>
+    <qc-option value="4">Option 4</qc-option>
+    <qc-option value="5">Option 5</qc-option>
+    <qc-option value="6">Option 6</qc-option>
+    <qc-option value="7">Option 7</qc-option>
+    <qc-option value="8">Option 8</qc-option>
+    <qc-option value="9">Option 9</qc-option>
+    <qc-option value="10">Option 10</qc-option>
+    <qc-option value="11">Option 11</qc-option>
+    <qc-option value="12">Option 12</qc-option>
+    <qc-option value="13">Option 13</qc-option>
+    <qc-option value="14">Option 14</qc-option>
+    <qc-option value="15">Option 15</qc-option>
+    <qc-option value="16">Option 16</qc-option>
+  </qc-dropdown-list>
 </div>
 
 <qc-dropdown-list
@@ -136,7 +136,7 @@
     <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
   </qc-dropdown-list>
 
-  <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
+  <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
 </form>
 
 <script>
