FormError, Checkbox, ChoiceGroup - modifications pour compliance avec les contextes d'accessibilité et simplification de la gestion des attributs `invalidText` et `required`.

--- a/src/sdg/components/ChoiceGroup/checkboxTest.html
+++ b/src/sdg/components/ChoiceGroup/checkboxTest.html
@@ -94,6 +94,7 @@
         <qc-checkbox
                            required
                            invalid
+                           invalid-text="Veuillez accepter les conditions d’utilisation"
         >
             <label>
                 <input type="checkbox"
@@ -181,6 +182,7 @@
                 compact
                invalid
                required
+                invalid-text="Veuillez accepter les conditions d’utilisation"
         >
             <label>
                 <input type="checkbox"
