--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -7,6 +7,7 @@
         <qc-button variant="primary" rounded label="Principal"></qc-button>
         <qc-button variant="primary" disabled label="Principal"></qc-button>
         <qc-button variant="primary" compact label="Principal"></qc-button>
+        <qc-button variant="primary" compact rounded label="Principal"></qc-button>
     </div>
 
     <div>
@@ -14,6 +15,7 @@
         <qc-button variant="secondary" rounded label="Secondaire"></qc-button>
         <qc-button variant="secondary" disabled label="Secondaire"></qc-button>
         <qc-button variant="secondary" compact label="Secondaire"></qc-button>
+        <qc-button variant="secondary" compact rounded label="Secondaire"></qc-button>
     </div>
 
     <div>
@@ -21,6 +23,7 @@
         <qc-button variant="tertiary" rounded label="Tertiaire"></qc-button>
         <qc-button variant="tertiary" disabled label="Tertiaire"></qc-button>
         <qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" compact rounded label="Tertiaire"></qc-button>
     </div>
 
     <div>
@@ -28,6 +31,7 @@
         <qc-button variant="danger" rounded label="Avertissement"></qc-button>
         <qc-button variant="danger" disabled label="Avertissement"></qc-button>
         <qc-button variant="danger" compact label="Avertissement"></qc-button>
+        <qc-button variant="danger" compact rounded label="Avertissement"></qc-button>
     </div>
 </qc-doc-exemple>
 
