--- a/src/sdg/components/Button/_button.scss
+++ b/src/sdg/components/Button/_button.scss
@@ -27,6 +27,11 @@
     width: 100%;
   }
 
+  &:focus,
+  &:focus-visible {
+    outline: none;
+  }
+
   &.qc-compact {
     font-weight: token-value(font weight, semi-bold);
     min-width: rem(80);
