--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2231,7 +2231,7 @@ qc-search-bar {
   color: var(--qc-color-white);
   background-color: var(--qc-color-blue-piv);
   border-color: var(--qc-color-blue-piv);
-  box-shadow: 0 1px 4px rgba(34, 54, 84, 0.24);
+  box-shadow: 0 1px 4px var(--qc-color-box_shadow);
 }
 .qc-button.qc-primary:hover:not(:disabled) {
   background-color: var(--qc-color-blue-regular);
@@ -2240,7 +2240,7 @@ qc-search-bar {
 .qc-button.qc-primary:focus:not(:disabled) {
   background-color: var(--qc-color-blue-regular);
   border-color: var(--qc-color-blue-dark);
-  box-shadow: 0 2px 8px rgba(34, 54, 84, 0.24), 0 0 0 2px var(--qc-color-blue-light);
+  box-shadow: 0 2px 8px var(--qc-color-box_shadow), 0 0 0 2px var(--qc-color-blue-light);
 }
 .qc-button.qc-primary:active:not(:disabled) {
   background-color: var(--qc-color-blue-regular_light);
