--- a/src/sdg/components/TextField/Test/textFieldTest.html
+++ b/src/sdg/components/TextField/Test/textFieldTest.html
@@ -1,13 +1,13 @@
 <qc-textfield label="Petit"
-              class="qc-sm">
+              size="sm">
     <input type="text"
            name="text-sm"
            placeholder="25"
     />
 </qc-textfield>
 
-<qc-textfield class="qc-md"
-    >
+<qc-textfield size="md"
+>
     <label for="text-md">Moyen</label>
     <input type="text"
            id="text-md"
@@ -17,7 +17,7 @@
 </qc-textfield>
 
 <qc-textfield label="Large"
-              class="qc-lg"
+              size="lg"
               invalid
 >
     <input type="text"
@@ -28,7 +28,7 @@
 
 <qc-textfield name="text-xl"
               label="Très large"
-              class="qc-xl"
+              size="xl"
               placeholder="Long placeholder lorem ipsum dolor sit amet"
               required>
     <input type="text"
@@ -38,7 +38,7 @@
 
 <qc-textfield
         label="Extra large"
-        class="qc-xxl"
+        size="xxl"
 
 >
     <input type="text"
@@ -51,7 +51,7 @@
 <div class="qc-textfield-row">
     <qc-textfield
             label="Combiné 1"
-            class="qc-md"
+            size="md"
     >
         <input type="text"
                placeholder="Long placeholder lorem ipsum dolor sit amet"
@@ -61,7 +61,7 @@
 
     <qc-textfield
             label="Combiné 2"
-            class="qc-sm"
+            size="sm"
     >
         <input type="text"
                name="combo-2"
@@ -71,7 +71,7 @@
 <div class="qc-textfield-row">
     <qc-textfield
             label="Combiné 1 invalide"
-            class="qc-md"
+            size="md"
             invalid
     >
         <input type="text"
@@ -81,7 +81,7 @@
 
     <qc-textfield
             label="Combiné 2"
-            class="qc-sm"
+            size="sm"
             invalid
     >
         <input type="text"
@@ -92,7 +92,7 @@
 </div>
 
 <qc-textfield for="zone-xl"
-              class="qc-xl"
+              size="xl"
               label="Commentaires"
               description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
 >
@@ -102,7 +102,7 @@
 <qc-textfield
         label="Suggestions"
         description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
-        class="qc-xxl"
+        size="xxl"
         max-length="50"
         required
 >
@@ -111,7 +111,7 @@
 
 <qc-textfield label="Suggestions"
               description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
-              class="qc-xxl"
+              size="xxl"
               max-length="50"
               required
               invalid
