Doc - mise à jour

--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -284,3 +284,8 @@
 </div>
 
 <p>Pour les autres attributs, voir la rubrique de <a href="#selection-button-attributes">boutons de sélection</a>.</p>
+
+<h4>Zone d’ajout de contenu HTML</h4>
+
+<p>Ce composant ne comporte qu'une seule zone d'ajout de contenu par défaut.</p>
+
