--- a/src/sdg/components/Button/_button.scss
+++ b/src/sdg/components/Button/_button.scss
@@ -27,12 +27,19 @@
     width: 100%;
   }
 
+  &:focus,
+  &:focus-visible {
+    outline: none;
+  }
+
   &.qc-compact {
     font-weight: token-value(font weight, semi-bold);
     min-width: rem(80);
     min-height: rem(40);
     padding: rem(8) rem(16);
     border-width: 1px;
+    margin-right: token-value(spacer, md);
+    margin-bottom: token-value(spacer, sm);
 
     @include media-mobile() {
       width: 100%;
@@ -47,7 +54,7 @@
     color: token-value(color white);
     background-color: token-value(color blue piv);
     border-color: token-value(color blue piv);
-    box-shadow: 0 1px 4px rgba(map.get(map.get(map.get($xl-tokens, color), blue), dark), 0.24);
+    box-shadow: 0 1px 4px token-value(color box_shadow);
 
     &:hover:not(:disabled) {
       background-color: token-value(color blue, regular);
@@ -58,7 +65,7 @@
       background-color: token-value(color blue, regular);
       border-color: token-value(color blue, dark);
       box-shadow:
-              0 2px 8px rgba(map.get(map.get(map.get($xl-tokens, color), blue), dark), 0.24),
+              0 2px 8px token-value(color box_shadow),
               0 0 0 2px token-value(color blue, light);
     }
 
