--- a/src/sdg/components/Icon/_icon.html
+++ b/src/sdg/components/Icon/_icon.html
@@ -1,13 +1,15 @@
-<h2 id="icons">Icônes</h2>
+<h2 id="icons">Icônes (qc-icon)</h2>
+
+<p> Le composant <code>qc-icon</code> permet d’afficher une icône avec la bonne couleur quel que soit le thème.</p>
 
 <h3>Exemples</h3>
 <qc-doc-exemple caption="Exemples d'utilisation d'icônes avec différentes propriétés."
   id="icons-exemple">
-  <qc-icon type="error" color="error" size="xs"></qc-icon>
-  <qc-icon type="error" color="error" size="sm"></qc-icon>
-  <qc-icon type="error" color="error" size="md"></qc-icon>
-  <qc-icon type="error" color="error" size="lg"></qc-icon>
-  <qc-icon type="error" color="error" size="xl"></qc-icon>
+  <qc-icon type="success" color="pink-regular" size="xs"></qc-icon>
+  <qc-icon type="success" color="blue-piv" size="sm"></qc-icon>
+  <qc-icon type="success" color="grey-dark" size="md"></qc-icon>
+  <qc-icon type="success" color="purple" size="lg"></qc-icon>
+  <qc-icon type="success" color="success" size="xl"></qc-icon>
 
 </qc-doc-exemple>
 <style>
@@ -34,7 +36,7 @@
       <td>type</td>
       <td>Texte</td>
       <td>""</td>
-      <td>Nom de l’icône à afficher.</td>
+      <td>Nom de l’icône à afficher, à prendre dans la liste ci-dessous.</td>
     </tr>
     <tr>
       <td>label</td>
@@ -71,6 +73,101 @@
       <td>URL</td>
       <td>""</td>
       <td>Chemin vers une image personnalisée à utiliser comme icône.</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+<h4>Liste des icônes</h4>
+
+<div class="table-overflow">
+  <table class="qc-table qc-striped component-attributes-description">
+    <thead>
+    <tr>
+      <th>Nom</th>
+      <th>Aperçu</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>arrow-up</td>
+      <td><qc-icon type="arrow-up"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>checkmark</td>
+      <td><qc-icon type="checkmark"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>chevron-up-thin</td>
+      <td><qc-icon type="chevron-up-thin"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>chevron-up</td>
+      <td><qc-icon type="chevron-up"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>clipboard</td>
+      <td><qc-icon type="clipboard"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>error</td>
+      <td><qc-icon type="error"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>exclamation</td>
+      <td><qc-icon type="exclamation"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>external-link</td>
+      <td><qc-icon type="external-link"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>information</td>
+      <td><qc-icon type="information"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>ligth-bulb</td>
+      <td><qc-icon type="ligth-bulb"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>minus</td>
+      <td><qc-icon type="minus"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>note</td>
+      <td><qc-icon type="note"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>plus</td>
+      <td><qc-icon type="plus"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>question-mark</td>
+      <td><qc-icon type="question-mark"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>search-thin</td>
+      <td><qc-icon type="search-thin"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>search</td>
+      <td><qc-icon type="search"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>success</td>
+      <td><qc-icon type="success"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>warning</td>
+      <td><qc-icon type="warning"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>xclose-thin</td>
+      <td><qc-icon type="xclose-thin"></qc-icon></td>
+    </tr>
+    <tr>
+      <td>xclose</td>
+      <td><qc-icon type="xclose"></qc-icon></td>
     </tr>
     </tbody>
   </table>
