--- a/src/sdg/components/Notice/_notice.html
+++ b/src/sdg/components/Notice/_notice.html
@@ -5,7 +5,7 @@
                 caption="Exemple d’avis neutres"
 >
   <qc-notice type="advice"
-             icon="ampoule"
+             icon="ligth-bulb"
              title="Nouvelle règlementation"
              content="Les nouveaux règlements de pêche seront en vigeur à partir du 12 mai.">
   </qc-notice>
