--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -15,6 +15,7 @@
 @use "utilities/themes";
 @use "utilities/states";
 @use "../components/Icon/icons";
+@use "../components/IconButton/iconButton";
 @use "../components/Notice/notice";
 @use "../components/PivHeader/pivHeader";
 @use "../components/PivFooter/pivFooter";
