--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -149,11 +149,15 @@
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: var(--qc-spacer-sm);
   --qc-spacer-list-item-mb: var(--qc-spacer-sm);
-  --qc-spacer-input-xs: 6.3rem;
-  --qc-spacer-input-sm: 15.6rem;
-  --qc-spacer-input-md: 24.9rem;
-  --qc-spacer-input-lg: 52.8rem;
-  --qc-spacer-input-xl: 82.5rem;
+  --qc-size-textfield-sm: 6.3rem;
+  --qc-size-textfield-md: 15.6rem;
+  --qc-size-textfield-lg: 24.9rem;
+  --qc-size-textfield-xl: 52.8rem;
+  --qc-size-textfield-xxl: 82.5rem;
+  --qc-size-input-default: lg;
+  --qc-size-textarea-default: xl;
+  --qc-size-textarea-default-min-height: 10.8rem;
+  --qc-size-searchbar-default: 64rem;
   --qc-grid-gutter: 32px;
   --qc-grid-breakpoint-xs: 0;
   --qc-grid-breakpoint-sm: 768px;
