--- a/src/sdg/components/Icon/_icon.html
+++ b/src/sdg/components/Icon/_icon.html
@@ -45,6 +45,12 @@
       <td>Texte alternatif pour l’accessibilité. Sert de libellé pour les lecteurs d’écran.</td>
     </tr>
     <tr>
+      <td>rotate</td>
+      <td>Nombre</td>
+      <td>na</td>
+      <td>Rotation de l'image en degrés dans le sens horaire.</td>
+    </tr>
+    <tr>
       <td>size</td>
       <td>"xs", "sm", "md", "lg" ou "xl"</td>
       <td>"md"</td>
