Icônes, boutons et groupe de choix - maj de la doc et des tests

--- a/src/sdg/components/Button/Test/buttonTest.html
+++ b/src/sdg/components/Button/Test/buttonTest.html
@@ -58,9 +58,17 @@
         <qc-icon type="plus"></qc-icon>
         Action
     </button>
+</div>
 
+<div>
     <button class="qc-button qc-simple qc-compact">
-        <qc-icon type="external-link"></qc-icon>
+        <qc-icon type="information"></qc-icon>
         Action
     </button>
+
+    <button class="qc-button qc-simple qc-compact" disabled>
+        <qc-icon type="plus"></qc-icon>
+        Action
+    </button>
+
 </div>
