--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -1,4 +1,4 @@
-<h2 id="base-button">Boutons</h2>
+<h2 id="buttons">Boutons</h2>
 <h3>Exemples</h3>
 
 <qc-doc-exemple caption="Exemples des différentes options de boutons.">
@@ -36,7 +36,7 @@
 
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples de boutons avec un icone.">
+<qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détail concernant le composant <code>qc-icon</code>">
     <div>
         <button class="qc-button qc-primary">
             <qc-icon type="plus"></qc-icon>
@@ -58,7 +58,7 @@
     </button>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples de boutons simples.">
+<qc-doc-exemple caption="Exemples de boutons simples avec leur variant compacte.">
     <div>
         <button class="qc-button qc-simple">
             <qc-icon type="information"></qc-icon>
@@ -69,9 +69,15 @@
             <qc-icon type="plus"></qc-icon>
             Action
         </button>
-
+    </div>
+    <div>
         <button class="qc-button qc-simple qc-compact">
-            <qc-icon type="external-link"></qc-icon>
+            <qc-icon type="information"></qc-icon>
+            Action
+        </button>
+
+        <button class="qc-button qc-simple qc-compact" disabled>
+            <qc-icon type="plus"></qc-icon>
             Action
         </button>
     </div>
@@ -90,52 +96,36 @@
         </thead>
         <tbody>
         <tr>
-            <td><code>qc-button</code></td>
+            <td><code>qc‑button</code></td>
             <td>Classe de base obligatoire pour tous les boutons. Définit la typographie, la taille, les marges, le padding, et le comportement responsive.</td>
         </tr>
         <tr>
-            <td><code>qc-compact</code></td>
+            <td><code>qc‑compact</code></td>
             <td>Variante compacte du bouton avec des dimensions réduites et un padding plus petit.</td>
         </tr>
         <tr>
-            <td><code>qc-button-rounded</code></td>
+            <td><code>qc‑button‑rounded</code></td>
             <td>Ajoute un rayon de bordure pour arrondir les coins du bouton.</td>
         </tr>
         <tr>
-            <td><code>qc-primary</code></td>
+            <td><code>qc‑primary</code></td>
             <td>Bouton principal avec fond bleu et texte blanc.</td>
         </tr>
         <tr>
-            <td><code>qc-secondary</code></td>
+            <td><code>qc‑secondary</code></td>
             <td>Bouton secondaire avec fond blanc et texte bleu.</td>
         </tr>
         <tr>
-            <td><code>qc-tertiary</code></td>
+            <td><code>qc‑tertiary</code></td>
             <td>Bouton tertiaire avec fond blanc et texte bleu.</td>
         </tr>
         <tr>
-            <td><code>qc-danger</code></td>
+            <td><code>qc‑danger</code></td>
             <td>Bouton d’avertissement avec fond rouge et texte blanc.</td>
         </tr>
         <tr>
-            <td><code>qc-simple</code></td>
+            <td><code>qc‑simple</code></td>
             <td>Bouton sans fond ni bordure.</td>
-        </tr>
-        <tr>
-            <td><code>disabled</code></td>
-            <td>État désactivé du bouton. Change l’apparence et désactive les interactions.</td>
-        </tr>
-        <tr>
-            <td><code>&lt;qc-icon&gt;</code></td>
-            <td>Composant permettant d'afficher une icône. Peut être placé avant ou après le texte.</td>
-        </tr>
-        <tr>
-            <td>type (dans qc-icon)</td>
-            <td>Type d'icône à afficher. (voir la section <a href="#icons">icônes</a>)</td>
-        </tr>
-        <tr>
-            <td>src (dans qc-icon)</td>
-            <td>Permet d'afficher une icône personnalisée en base64.</td>
         </tr>
         </tbody>
     </table>
