--- a/src/sdg/components/Icon/IconDoc.ejs
+++ b/src/sdg/components/Icon/IconDoc.ejs
@@ -99,7 +99,7 @@
         <% icons.forEach(function(icon){ %>
             <tr>
                 <td><%= icon %></td>
-                <td><qc-icon type="<%= icon %>"></qc-icon></td>
+                <td><qc-icon type="<%= icon %>" size="lg" /></td>
             </tr>
         <% }); %>
         </tbody>
